   if no transcoding was originally needed.  Transcoding via SLIN is forced
   in this case.

res_pjproject
------------------
 * Added the "cache_pools" option to pjproject.conf.  Disabling the option
   helps track down pool content mismanagement when using valgrind or
   MALLOC_DEBUG.  The cache gets in the way of determining if the pool contents
   are used after free and who freed it.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 15.2.0 to Asterisk 15.3.0 ------------
------------------------------------------------------------------------------

Core
------------------
 * During dialplan reload log messages are produced for each context,
   extension and include.  These messages are no longer printed by the
   verbose loggers, they are now only logged as debug messages.

app_confbridge
------------------
 * Added the Muted header to the ConfbridgeJoin AMI event to indicate the
   participant's starting mute status.

 * Made the AMI ConfbridgeList action's ConfbridgeList events output all
   the standard channel snapshot headers instead of a few hand-coded channel
   snapshot headers.  The benefit is that the CallerIDName gets disruptive
   characters like CR, LF, Tab, and a few others escaped.  However, an empty
   CallerIDName is now output as "<unknown>" instead of "<no name>".

app_followme
------------------
 * Added a new prompt, connecting-prompt, which will be played
   (if configured) to the "winner" callee before connecting the call.

res_pjsip
------------------
 * Users who are matching endpoints by SIP header need to reevaluate their
   global "endpoint_identifier_order" option in light of the "ip" endpoint
   identifier method split into the "ip" and "header" endpoint identifier
   methods.

 * The pjsip_transport_event feature introduced in 15.1.0 has been refactored.
   Any external modules that may have used that feature (highly unlikey) will